# mytodo

./: .gitignore  Cargo.toml  Rocket.toml  testdb.sqlite3
migrations/2019-09-01-195410_task/: up.sql
src/db/: mod.rs  models.rs
