[package]
name = "mytodo"
version = "0.1.0"
authors = ["willgough <williamhenrygough@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["sqlite"] }
colored = "1.8.0"